# create-gpui-docview

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
src/: main.rs
templates/docview/: README.md  _AGENTS.md  _Cargo.toml
templates/docview/crates/PROJECT_NAME/: _Cargo.toml
templates/docview/crates/PROJECT_NAME/gpui-docview-app/: Cargo.toml  README.md
templates/docview/crates/PROJECT_NAME/gpui-docview-app/crates/docking/src/: dock.rs  panel_trait.rs
templates/docview/crates/PROJECT_NAME/gpui-docview-app/crates/gpui-docview-app/: Cargo.toml
templates/docview/crates/PROJECT_NAME/gpui-docview-app/crates/gpui-docview-app/src/: main.rs
templates/docview/crates/PROJECT_NAME/gpui-docview-app/crates/modals/: Cargo.toml
templates/docview/crates/PROJECT_NAME/gpui-docview-app/crates/pane/: Cargo.toml
templates/docview/crates/PROJECT_NAME/gpui-docview-app/crates/panels/: Cargo.toml
templates/docview/crates/PROJECT_NAME/gpui-docview-app/crates/theme/: Cargo.toml
templates/docview/crates/PROJECT_NAME/src/: main.rs
templates/docview/crates/docking/: _Cargo.toml
templates/docview/crates/docking/src/: lib.rs
templates/docview/crates/modals/src/: dialog.rs  lib.rs  picker.rs  settings_modal.rs
templates/docview/crates/pane/src/: lib.rs  pane.rs  pane_group.rs  split_pane.rs
templates/docview/crates/statusbar/: _Cargo.toml
templates/docview/crates/statusbar/src/: lib.rs
templates/docview/crates/theme/src/: lib.rs  settings_model.rs  theme.rs
(+9 files in other folders)
