[package]
name = "create-gpui-docview"
description = "A CLI tool to create a new GPUI document-view style app."
repository = "https://github.com/blacktop/create-gpui-docview"
version = "0.1.2"
edition = "2021"
license = "MIT"
keywords = ["gpui", "zed", "scaffold", "template", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "create-gpui-docview"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
include_dir = "0.7"
